<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        android:background="@drawable/round_line_gray">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/txtStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/belum_tuntas"
                android:gravity="center_vertical"
                android:drawableStart="@drawable/ic_check_red" />

            <TextView
                android:id="@+id/txtTanggal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/tgl"
                android:gravity="center_vertical|end"
                app:drawableEndCompat="@drawable/ic_date" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtJudul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/kompetensi"
            android:ellipsize="end"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/txtKeterangan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/deskripsi"
            android:ellipsize="end"
            android:maxLines="2"
            android:textSize="15sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#959393"
            android:layout_marginTop="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/txtEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ubah"
                android:gravity="center_vertical"
                app:drawableStartCompat="@drawable/ic_edit" />

            <TextView
                android:id="@+id/txtHapus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hapus"
                android:gravity="center_vertical|end"
                app:drawableEndCompat="@drawable/ic_delete" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>